# agent-memory-harness

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  analysis-ablation-survey.md  architecture-swebench-cl.html  architecture.html  architecture.md  benchmark-schema-sampledata.md  benchmarks.html  collaborate.html  implementation.html  index.html  memory-inspector.html  plan.html  plan.md  prd-plan-compliance.md  prd.md  project-plan.md  results.html  results.json  suggestion.md  team.html
eval/: .gitignore  PROTOCOL.md  README.md  pyproject.toml
eval/memeval/: __init__.py  agent.py  aggregate.py  cli.py  cost.py  dotenv_loader.py  grader.py  grader_integrity.py  grader_swebench.py  harness.py  metrics.py  models.py  okf.py  protocols.py  results.py  router.py  safety.py  schema.py  tracing.py  trajectory.py
eval/memeval/claudecode/: BUILTIN_RECALL_FINDINGS.md  README.md  __init__.py  agent.py  checkout.py  cli.py  grok_runner.py  memory_server.py  pipeline.py  pipeline_summary.py  platform.py  run_bench.py  sandbox.py  service.py
eval/memeval/claudecode/plugin/: .mcp.json  README.md
eval/memeval/config/: keys.example.json
eval/memeval/cursorcli/: __init__.py  agent.py  cli.py  platform.py  sandbox.py
eval/memeval/data/swe_bench_cl/: README.md  versions.json
eval/memeval/data/vista/: ATTRIBUTION.md  vista_corpus.jsonl
eval/memeval/dreaming/: __init__.py  __main__.py  _extract.py  _state.py  cli.py  engine.py  events.py  llm.py  prompts.py  transcript_formatter.py  worker.py
eval/memeval/dreaming/redaction/: README.md  __init__.py  _audit.py
eval/memeval/dreaming/replay/: cli.py
eval/memeval/dreaming/tests/: DAYDREAM_SELECTIVE_RUBRIC.md  INITIAL_DREAM_RUBRIC.md  JOB1_MUTATION_RUBRIC.md  JOB2_CONTRADICTION_RUBRIC.md  JOB3_GOVERNANCE_RUBRIC.md  JOB4_TTL_RUBRIC.md  MIGRATION_STOP_HOOK_RUBRIC.md  PR1_REDACTION_RUBRIC.md  PR4_ENGINE_RUBRIC.md  PR5_DAYDREAM_CLI_RUBRIC.md  conftest.py  test_cli.py  test_cost_openrouter_pricing.py  test_detect_secrets_assumptions.py  test_dream_model_env_override.py  test_engine.py  test_events.py  test_extract.py  test_extract_retry.py  test_llm.py  test_plugin_manifest.py  test_prompts.py  test_redaction.py  test_redaction_anti_slop.py  test_redaction_audit.py  test_redaction_coverage.py  test_redaction_gitignore.py  test_redaction_lazy_import.py  test_redaction_newtype.py  test_redaction_plugins.py  test_replay.py  test_state.py  test_transcript_formatter.py  test_worker.py  test_worker_contradiction.py  test_worker_governance.py  test_worker_induction.py  test_worker_mutation.py  test_worker_ttl.py
eval/memeval/loaders/: __init__.py  base.py  contextbench.py  longmemeval.py  memoryagentbench.py  swe_bench_cl.py  swe_contextbench.py  vista.py
eval/memeval/native/: __init__.py  cli.py  judge.py  registry.py  runner.py  spec.py
eval/memeval/native/evaluators/: __init__.py  base.py  contextbench.py  longmemeval.py  memoryagentbench.py  swe_bench_cl.py  swe_contextbench.py  vista.py
eval/memeval/native/tests/: __init__.py  test_native_contextbench.py  test_native_longmemeval.py  test_native_memoryagentbench.py  test_native_scaffold.py  test_native_swe_bench_cl.py  test_native_swe_contextbench.py
eval/memeval/opencode/: __init__.py  agent.py  framework.py
eval/memeval/stores/: __init__.py  coverage_rank.py  embedders.py  falkor_store.py  fts5_store.py  graph_store.py  markdown_store.py  neo4j_store.py  query_expand.py  relations.py  rerankers.py  sqlite_store.py
eval/memeval/stores/tests/: __init__.py  test_backend_durability.py  test_build_store_fusion_local.py  test_cascade_graph_depth.py  test_coverage_rank.py  test_d008_cascade.py  test_d008_evals.py  test_dedup_evals.py  test_delete_evals.py  test_e2e_crud_durable.py  test_effective_profile.py  test_embedders.py  test_falkor_live_parity.py  test_falkor_native_eval.py  test_falkor_native_structural.py  test_falkor_parity.py  test_fts5_parity.py  test_fts5_store.py  test_fusion_bakeoff.py  test_fusion_evals.py  test_graph_durability.py  test_graph_retrieval_evals.py  test_graph_semantic_seed.py  test_graph_store.py  test_markdown_store.py  test_neo4j_live_parity.py  test_neo4j_parity.py  test_okf_frontmatter.py  test_okf_to_graph.py  test_profile_matrix.py  test_query_expand.py  test_relations.py  test_rerankers.py  (+11 more)
eval/tests/: test_checkout.py  test_claudecode_code_agent.py  test_cursorcli_agent.py  test_dotenv_loader.py  test_grader_repo_cache.py  test_grading_reporting.py  test_pipeline.py  test_pipeline_version.py  test_plugin_group_store.py  test_plugin_shared_store.py  test_plugin_workers_race.py  test_primed_sessionstart_resilience.py  test_sandbox.py  test_smoke.py  test_swe_bench_cl_vendored.py  test_swebench_host_grader.py  test_vista_benchmark.py  test_vista_builtin_recall.py  test_vista_content_scoring.py  test_vista_full_corpus.py  test_vista_grader_integrity.py  test_vista_plugin_real.py  test_vista_safety_gate.py  test_vista_scoring.py  test_vista_seed.py  test_vista_seed_coverage.py
eval/tests/fixtures/: contextbench.json  longmemeval.json  memoryagentbench.json  swe_bench_cl.json  swe_contextbench.json  trajectory.jsonl
eval/tools/: .gitignore  _after_e2e.py  _measure.sh  consolidation_gate.py  extract_ab.py  probe_group_aware.py  probe_group_sizes.py  recall_eval.py  recall_harvest.py  recall_precision_gate.py
eval/tools/tests/: test_recall_eval.py
plugin/: .gitignore  README.md  pyproject.toml
plugin/cookbook_memory/: __init__.py  __main__.py  cli.py
plugin/cookbook_memory/adapters/: __init__.py
plugin/cookbook_memory/core/: __init__.py  client.py  config.py  contract.py  events.py  install.py  memory.py  orchestrator.py
plugin/docs/: walking-skeleton.md
plugin/marketplace/cookbook-memory/: .mcp.json
plugin/tests/: test_adapter_claude_code.py  test_bundle_launcher.py  test_cli.py  test_contract_fusion_falkor.py  test_contract_graph_persist.py  test_contract_recall_min_score.py  test_contract_rerank.py  test_core.py  test_hooks_handler_subprocess.py  test_install.py  test_store_gitignore.py
(+3507 files in other folders)
