# pyproject.toml -- packaging for the AI Agent Memory Harness evaluation infra.
#
# Distribution name : agent-memory-eval   (pip install agent-memory-eval)
# Import package    : memeval             (import memeval ; NOT "eval")
#
# DESIGN RULE (load-bearing): the OFFLINE path -- parsing local fixtures,
# metrics math, the harness with EchoModel + InMemoryStore, cost gates,
# trajectory JSONL IO, and the smoke tests -- runs on the Python STANDARD
# LIBRARY ALONE. There are therefore NO required runtime dependencies below.
# Every heavy dependency (anthropic, datasets, numpy, pyyaml, requests, faiss)
# is OPTIONAL, lives in an extras group here, and is imported LAZILY inside the
# one function that needs it -- never at module top level. So a bare
# `pip install agent-memory-eval` is enough to run `python -m pytest tests`
# and the echo-model CLI offline.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-eval"
version = "0.1.0"
description = "Evaluation infrastructure for the AI Agent Memory Harness: unified loaders, four memory metrics (recency/efficiency/relevancy/accuracy), a deterministic offline harness, cost gating, and trajectory logging across five public memory benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AI Agent Memory Harness team" },
]
keywords = [
    "llm", "memory", "agents", "evaluation", "benchmark",
    "longmemeval", "memoryagentbench", "swe-bench", "anthropic", "claude",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# No required runtime deps: the offline path is stdlib-only by contract.
dependencies = []

[project.optional-dependencies]
# Real Anthropic models (AnthropicAdapter lazy-imports `anthropic`).
anthropic = ["anthropic>=0.40.0"]

# Remote benchmark download/parse via HuggingFace `datasets`
# (loaders' `_load_remote` path; the local-file path stays stdlib-only).
hf = ["datasets>=2.19.0"]

# Embedding-based relevancy / vector stores (optional; offline path is numpy-free).
embeddings = ["numpy>=1.26"]

# Real CODE scoring runs on the host with no extra dependency: memeval.grader.
# The Claude Code CLI acts as a genuine coding agent (real checkout, edit, run
# tests) and LocalExecGrader applies the agent's patch + the gold tests in a
# fresh checkout, then runs the project's tests in a per-task venv (best-effort;
# ungraded when the env can't be built). No containers, no extra grading package
# — see ADR-eval-002.

# Langfuse Cloud tracing (memeval.tracing). Lazy + no-op unless keys are set, so
# the offline path never imports it.
langfuse = ["langfuse>=3.0"]

# Run the benchmarks through the Claude Code CLI with our memory plugin
# (memeval.claudecode.*). Needs the MCP SDK for the memory server; the `claude`
# CLI is installed separately via npm.
claudecode = ["mcp>=1.0"]

# v1 Daydream inline secret redaction (memeval.dreaming.redaction). Pinned to
# the spike-validated version per ADR-dreaming-005; upgrades follow the
# checklist in that ADR (regression test + custom plugin compatibility).
# httpx is the HTTP transport for OpenRouterClient (ADR-dreaming-006 +
# ADR-dreaming-012); lazy-imported inside complete() per architecture.md §3.
daydream = ["detect-secrets==1.5.0", "httpx>=0.27"]

# Convenience: everything needed for real (online, paid) runs.
full = [
    "anthropic>=0.40.0",
    "datasets>=2.19.0",
    "numpy>=1.26",
    "requests>=2.31",
    "pyyaml>=6.0",
]

# Test/lint toolchain. NOTE: the smoke tests do NOT require pytest -- they run
# under `python tests/test_smoke.py` too. This group is for `python -m pytest`.
dev = [
    "pytest>=8.0",
    # mypy enforces the RedactedText NewType (ADR-dreaming-010). Pin compatible
    # range; the negative-typecheck regression test (criterion #74 in the
    # PR1 redaction rubric) is brittle to mypy version drift.
    "mypy>=1.10,<2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agent-memory-harness"
Repository = "https://github.com/your-org/agent-memory-harness"
"Benchmark: MemoryAgentBench" = "https://huggingface.co/datasets/ai-hyz/MemoryAgentBench"
"Benchmark: LongMemEval" = "https://huggingface.co/datasets/xiaowu0162/longmemeval"
"Benchmark: SWE-ContextBench" = "https://huggingface.co/datasets/jiayuanz3/SWEContextBench"
"Benchmark: SWE-Bench-CL" = "https://huggingface.co/datasets/thomasjoshi/swe-bench-cl"

[project.scripts]
# Console entry point mirroring `python -m memeval.cli` (offline/API-model harness).
memeval = "memeval.cli:main"
# Per-developer benchmark runner over the Claude Code CLI (builtin vs plugin memory,
# subscription auth). `memeval-bench --benchmark longmemeval --mode plugin` is the
# short form of `python -m memeval.claudecode.run_bench …`.
memeval-bench = "memeval.claudecode.run_bench:main"
# Daydreaming CLI (ADR-dreaming-016): `daydream-cli daydream` is the Stop/PreCompact
# hook entry point; `daydream-cli dream --all` triggers the night-dream pass.
daydream-cli = "memeval.dreaming.cli:main"
# Benchmark-NATIVE evaluation CLI (additive; paper-faithful per-benchmark metrics).
# `memeval-native run --benchmark longmemeval --mode echo` is the short form of
# `python -m memeval.native.cli run …`. Offline path is stdlib-only.
memeval-native = "memeval.native.cli:main"

# --------------------------------------------------------------------------- #
# setuptools packaging
# --------------------------------------------------------------------------- #
[tool.setuptools.packages.find]
# Auto-discover every memeval subpackage (loaders, stores, dreaming, opencode,
# claudecode, …) so they all ship in a wheel — not just a hand-maintained list.
# Excludes tests from the distribution.
include = ["memeval*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Ship the example sharded-key config, the vendored SWE-Bench-CL dataset, and the
# Claude Code plugin assets inside the wheel (load_key_config, the offline-first
# SWE-Bench-CL loader, and the memeval-memory plugin all read these at runtime).
memeval = [
    "config/*.json",
    "data/swe_bench_cl/*.json",
    "data/swe_bench_cl/*.md",
]
"memeval.claudecode" = ["plugin/.mcp.json", "plugin/README.md", "plugin/.claude-plugin/*.json"]

# --------------------------------------------------------------------------- #
# Tooling config (optional; offline path does not depend on these)
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true   # heavy deps (anthropic, datasets, ...) are optional
# Transitively-imported modules outside the strict-checked target are not yet
# fully typed (loaders, cost, models, etc.). Follow imports for resolution but
# suppress their errors so the dreaming/ strict target reports only its own
# issues. Remove this once the rest of memeval is type-clean.
follow_imports = "silent"

# Don't apply strict checks to the existing pre-typed-era dreaming code or to
# tests; v1 strict-typecheck scope is dreaming/redaction/ per ADR-dreaming-010.
[[tool.mypy.overrides]]
module = [
    "memeval.dreaming.tests.*",
    "memeval.dreaming.worker",
    "memeval.dreaming.__init__",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
